fix: 2025, day 7 with functional memoization

--- a/2025/aoc2025.ipynb
+++ b/2025/aoc2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNcLp67BA/dG5+yg0CkiNNO",
+      "authorship_tag": "ABX9TyM/ocpxZq994mcNR1HBcXDq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3138,11 +3138,11 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "5Y84NGLxPoV6",
-        "outputId": "2e92110a-8f0f-417a-ad75-ddc8821ef6ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5Y84NGLxPoV6",
+        "outputId": "2e92110a-8f0f-417a-ad75-ddc8821ef6ed"
       },
       "execution_count": 6,
       "outputs": [
@@ -3396,11 +3396,11 @@
         "input_7 = get_aoc_input(2025, 7)"
       ],
       "metadata": {
-        "id": "Z8fJFAD97jat",
-        "outputId": "4ed85f5d-0007-4bef-f3ab-4f0ff54abe2a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Z8fJFAD97jat",
+        "outputId": "4ed85f5d-0007-4bef-f3ab-4f0ff54abe2a"
       },
       "execution_count": 7,
       "outputs": [
@@ -3422,7 +3422,7 @@
       "metadata": {
         "id": "ocB92v78Qh3F"
       },
-      "execution_count": 13,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -3438,27 +3438,30 @@
     {
       "cell_type": "code",
       "source": [
-        "seen = set()\n",
-        "def collect(p):\n",
+        "def collect(p, seen):\n",
         "  if not in_range(p, (height, width)) or p in seen:\n",
-        "    return set()\n",
-        "  seen.add(p)\n",
+        "    return set(), seen\n",
+        "  # |= or .add (mutable) would be faster\n",
+        "  # (but then we could just keep a ref to a mutable set outside the recursion)\n",
+        "  seen = seen | {p}\n",
         "  if get_cell(p, grid) == '^':\n",
-        "    return {p} | collect(vec_add(p, dir_left)) | collect(vec_add(p, dir_right))\n",
+        "    left, seen = collect(vec_add(p, dir_left), seen)\n",
+        "    right, seen = collect(vec_add(p, dir_right), seen)\n",
+        "    return ({p} | left | right), seen\n",
         "  # else:\n",
-        "  return collect(vec_add(p, dir_down))\n",
+        "  return collect(vec_add(p, dir_down), seen)\n",
         "\n",
-        "splits = collect((0, grid[0].find('S')))\n",
+        "splits, seen = collect((0, grid[0].find('S')), set())\n",
         "len(splits)"
       ],
       "metadata": {
-        "id": "V4kgtH5t5BgW",
-        "outputId": "eccebf87-cd78-4e15-abb9-8d92c68c2af4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "V4kgtH5t5BgW",
+        "outputId": "00e4426f-0ded-46ea-c7cb-996b72044719"
       },
-      "execution_count": 15,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3468,7 +3471,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 62
         }
       ]
     },
@@ -3478,13 +3481,13 @@
         "len(seen)"
       ],
       "metadata": {
-        "id": "s8yoVwY3qqhV",
-        "outputId": "4f220e70-f622-48e2-cdce-8a27a4bde0fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "s8yoVwY3qqhV",
+        "outputId": "b588b89b-67bd-4145-e338-c61258757b5a"
       },
-      "execution_count": 16,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3494,7 +3497,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 61
         }
       ]
     },
@@ -3511,30 +3514,36 @@
     {
       "cell_type": "code",
       "source": [
-        "paths = {}\n",
-        "def count_paths(p):\n",
-        "  if not in_range(p, (height, width)):\n",
-        "    return 1\n",
+        "def count_paths(p, paths):\n",
         "  if p in paths:\n",
-        "    return paths[p]\n",
+        "    return paths\n",
         "  if get_cell(p, grid) == '^':\n",
-        "    paths[p] = count_paths(vec_add(p, dir_left)) + count_paths(vec_add(p, dir_right))\n",
-        "    return paths[p]\n",
+        "    left = vec_add(p, dir_left)\n",
+        "    paths = count_paths(left, paths)\n",
+        "    right = vec_add(p, dir_right)\n",
+        "    paths = count_paths(right, paths)\n",
+        "    return paths | {p: paths[left] + paths[right]}\n",
         "  # else:\n",
-        "  paths[p] = count_paths(vec_add(p, dir_down))\n",
-        "  return paths[p]\n",
+        "  down = vec_add(p, dir_down)\n",
+        "  if in_range(down, (height, width)):\n",
+        "    paths = count_paths(down, paths)\n",
+        "    return paths | {p: paths[down]}\n",
+        "  # else:\n",
+        "  return paths | {p: 1}\n",
         "\n",
-        "num_paths = count_paths((0, grid[0].find('S')))\n",
-        "num_paths"
+        "start = (0, grid[0].find('S'))\n",
+        "paths = count_paths(start, {})\n",
+        "paths[start]"
       ],
       "metadata": {
-        "id": "n5trr4K4ESOB",
-        "outputId": "81be926f-9140-425b-e1bf-e3aef541f1e1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "collapsed": true,
+        "id": "n5trr4K4ESOB",
+        "outputId": "0da56db5-2ad3-4cab-b2e0-42fd238c35d8"
       },
-      "execution_count": 14,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3544,7 +3553,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 73
         }
       ]
     },
@@ -3554,13 +3563,13 @@
         "len(paths)"
       ],
       "metadata": {
-        "id": "0zgQaJkcqpjj",
-        "outputId": "588ff48f-8964-4c9b-e9c7-94b302b10a7f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0zgQaJkcqpjj",
+        "outputId": "a7d27e80-eb0d-44e9-9ab6-9f06e89f5ecc"
       },
-      "execution_count": 18,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3570,7 +3579,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 74
         }
       ]
     }
