--- a/2025/aoc2025.ipynb
+++ b/2025/aoc2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIbhSHvp6Fj2saIJCze+kQ",
+      "authorship_tag": "ABX9TyM1UvNRD702ONcY03GTZ6+c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 1,
       "metadata": {
         "id": "Qy0LSaFPC5ME",
         "collapsed": true
@@ -214,7 +214,7 @@
         "\n",
         "    return test_input"
       ],
-      "execution_count": 7,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -295,7 +295,7 @@
       "metadata": {
         "id": "FwCcOq_MJ1RT"
       },
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -3604,13 +3604,13 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "Z82F9KmA_Otj",
-        "outputId": "b1e6a244-03cd-444b-fdce-07f142f24870",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Z82F9KmA_Otj",
+        "outputId": "7e8484ef-3f7c-48cc-9b4c-dbde7a056dea"
       },
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -3733,13 +3733,13 @@
         "input_8 = get_aoc_input(2025, 8)"
       ],
       "metadata": {
-        "id": "2xhaUmgz_Y9t",
-        "outputId": "0f80484a-4019-4fc6-e2bb-20e18a97d23d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2xhaUmgz_Y9t",
+        "outputId": "e61a5e0d-4bef-44dc-9774-264204909212"
       },
-      "execution_count": 11,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -3754,46 +3754,192 @@
       "cell_type": "code",
       "source": [
         "# x,y,z junction box positions in 3d space\n",
-        "junctions = [[int(coord.strip()) for coord in l.split(',')] for l in test_input_8.splitlines()]\n",
-        "junctions"
+        "test_junctions = [[int(coord.strip()) for coord in l.split(',')] for l in test_input_8.splitlines()]\n",
+        "test_circuits = {i: i for i in range(0, len(test_junctions))}\n",
+        "[x for x in zip(range(0, len(test_junctions)), test_junctions)]"
       ],
       "metadata": {
-        "id": "ImFm5q0z_fA6",
-        "outputId": "611385d7-498f-4189-de8a-c9d00f8ff920",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vOaPUIfM548Z",
+        "outputId": "6368fc48-68d4-482a-e2af-0ee21bce927a"
       },
-      "execution_count": 18,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[[162, 817, 812],\n",
-              " [57, 618, 57],\n",
-              " [906, 360, 560],\n",
-              " [592, 479, 940],\n",
-              " [352, 342, 300],\n",
-              " [466, 668, 158],\n",
-              " [542, 29, 236],\n",
-              " [431, 825, 988],\n",
-              " [739, 650, 466],\n",
-              " [52, 470, 668],\n",
-              " [216, 146, 977],\n",
-              " [819, 987, 18],\n",
-              " [117, 168, 530],\n",
-              " [805, 96, 715],\n",
-              " [346, 949, 466],\n",
-              " [970, 615, 88],\n",
-              " [941, 993, 340],\n",
-              " [862, 61, 35],\n",
-              " [984, 92, 344],\n",
-              " [425, 690, 689]]"
+              "[(0, [162, 817, 812]),\n",
+              " (1, [57, 618, 57]),\n",
+              " (2, [906, 360, 560]),\n",
+              " (3, [592, 479, 940]),\n",
+              " (4, [352, 342, 300]),\n",
+              " (5, [466, 668, 158]),\n",
+              " (6, [542, 29, 236]),\n",
+              " (7, [431, 825, 988]),\n",
+              " (8, [739, 650, 466]),\n",
+              " (9, [52, 470, 668]),\n",
+              " (10, [216, 146, 977]),\n",
+              " (11, [819, 987, 18]),\n",
+              " (12, [117, 168, 530]),\n",
+              " (13, [805, 96, 715]),\n",
+              " (14, [346, 949, 466]),\n",
+              " (15, [970, 615, 88]),\n",
+              " (16, [941, 993, 340]),\n",
+              " (17, [862, 61, 35]),\n",
+              " (18, [984, 92, 344]),\n",
+              " (19, [425, 690, 689])]"
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# x,y,z junction box positions in 3d space\n",
+        "junctions = [[int(coord.strip()) for coord in l.split(',')] for l in input_8.splitlines()]\n",
+        "circuits = {i: i for i in range(0, len(junctions))}\n",
+        "len(junctions)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ImFm5q0z_fA6",
+        "outputId": "d0d0fd49-0eb2-4ad1-b5b6-d8ca444b7d08"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1000"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Utils"
+      ],
+      "metadata": {
+        "id": "pxrhl0DWKFzc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from math import sqrt\n",
+        "\n",
+        "def distance(j1, j2):\n",
+        "  (x1, y1, z1), (x2, y2, z2) = j1, j2\n",
+        "  return sqrt((x1-x2)**2 + (y1-y2)**2 + (z1-z2)**2)\n",
+        "\n",
+        "def connect(current_cs, conn):\n",
+        "  # current_cs = current circuits, dict(junction index -> circuit number)\n",
+        "  # conn = connection (frm, to)\n",
+        "  # assigns all junctions having the same circuit as d.to to the circuit of d.frm\n",
+        "  frm, to = conn\n",
+        "  junctions_in_to_circuit = [j for j, c in current_cs.items() if c == current_cs[to]]\n",
+        "  return { **current_cs, **{j: current_cs[frm] for j in junctions_in_to_circuit}}\n"
+      ],
+      "metadata": {
+        "id": "Dh3CyzNjKJM0"
+      },
+      "execution_count": 116,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Setup test"
+      ],
+      "metadata": {
+        "id": "7HH_qsIcIQtS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Run for test\n",
+        "n = 10\n",
+        "js = test_junctions\n",
+        "cs = test_circuits"
+      ],
+      "metadata": {
+        "id": "elqGRCFZIFog"
+      },
+      "execution_count": 117,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Setup full problem"
+      ],
+      "metadata": {
+        "id": "2kt0lvXoISey"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Run for full problem\n",
+        "n = 1000\n",
+        "js = junctions\n",
+        "cs = circuits"
+      ],
+      "metadata": {
+        "id": "_jKhk8jXIHFO"
+      },
+      "execution_count": 133,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Preparation for test and full problem\n",
+        "Run after running one of the setup cells!"
+      ],
+      "metadata": {
+        "id": "tn-SEWUAIUNa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "distances = {(i, j): distance(js[i], js[j]) for i in range(0, len(js)) for j in range(i+1, len(js))}\n",
+        "print(f\"caculated {len(distances)} distances\")\n",
+        "sorted_conns = sorted(distances, key=distances.get)  # contains just the keys (connection tuples (from, to))\n",
+        "shortest_conns = sorted_conns[:n]\n",
+        "print(f\"sorted connections by distance, got shortest {n} connections\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ILFjW2GT6KqH",
+        "outputId": "57b45cc2-9372-4bf7-d52d-386222447818"
+      },
+      "execution_count": 134,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "caculated 499500 distances\n",
+            "sorted connections by distance, got shortest 1000 connections\n"
+          ]
         }
       ]
     },
@@ -3801,7 +3947,7 @@
       "cell_type": "markdown",
       "source": [
         "### Part 1\n",
-        "Connect together n pairs of closest junction boxes"
+        "Connect together n pairs of closest junction boxes, multiply sizes of three largest circuits."
       ],
       "metadata": {
         "id": "OcxNuXA6ADv4"
@@ -3809,9 +3955,91 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "cs1 = reduce(connect, shortest_conns, cs)\n",
+        "\n",
+        "# Counter.most_common(n) returns a list of n tuples (value, count))\n",
+        "result = reduce(lambda p, c: p * c[1], Counter(cs1.values()).most_common(3), 1)\n",
+        "print(\"Product of sizes of three largest circuits =\", result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OKxLLaxT_2lM",
+        "outputId": "878341f3-bd87-489d-a68a-7d3c0c492ce7"
+      },
+      "execution_count": 144,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Product of sizes of three largest circuits = 67488\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Part 2\n",
+        "Connect until there is only one large circuit, multiply X coordinates of the two junctions closing it."
+      ],
+      "metadata": {
+        "id": "QMg796I9EgOQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def iterate_cs(i_cs):\n",
+        "  i, cs = i_cs\n",
+        "  return (i + 1, connect(cs, sorted_conns[i]))\n",
+        "\n",
+        "# connect according to sorted distances while > 1 circuit\n",
+        "cs_iter = takewhile(\n",
+        "    lambda i_cs: len(set(i_cs[1].values())) > 1,\n",
+        "    iterate((0, cs), iterate_cs))\n",
+        "\n",
+        "# Each element of the takewhile iteration is a tuple\n",
+        "# (NEXT connection to use, CURRENT circuit dict)\n",
+        "\n",
+        "# The last element contains the index of the NEXT connection that would reduce\n",
+        "# the number of circuits in the circuit dictionary to 1 (i.e., the one we are looking for)\n",
+        "# and the last circuit dictionary still containing 2 circuits (which we don't need)\n",
+        "last_state = list(cs_iter)[-1]\n",
+        "\n",
+        "conn_index_closing_circuit = last_state[0]\n",
+        "\n",
+        "# The connection that would close the circuit is at this index\n",
+        "frm, to = sorted_conns[conn_index_closing_circuit]\n",
+        "\n",
+        "print(f\"Product of X coordinates for the junctions {frm} and {to} closing the circuit: {js[frm][0] * js[to][0]}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FmZNYlmOAukw",
+        "outputId": "bcfdbdb7-4e77-41fe-f98c-e9893799fea9"
+      },
+      "execution_count": 143,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Product of X coordinates for the junctions 357 and 570 closing the circuit: 3767453340\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "OKxLLaxT_2lM"
+        "id": "eZKpzuuUNHJh"
       },
       "execution_count": null,
       "outputs": []
