chore: formatted and compacted some loc

--- a/2025/aoc2025.ipynb
+++ b/2025/aoc2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM1UvNRD702ONcY03GTZ6+c",
+      "authorship_tag": "ABX9TyOVjvcSIIva68nNi4rUJ+iS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3967,9 +3967,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OKxLLaxT_2lM",
-        "outputId": "878341f3-bd87-489d-a68a-7d3c0c492ce7"
+        "outputId": "bdf5fd3f-6e06-4c61-f981-55440cd24486"
       },
-      "execution_count": 144,
+      "execution_count": 146,
       "outputs": [
         {
           "output_type": "stream",
@@ -4009,11 +4009,7 @@
         "# the number of circuits in the circuit dictionary to 1 (i.e., the one we are looking for)\n",
         "# and the last circuit dictionary still containing 2 circuits (which we don't need)\n",
         "last_state = list(cs_iter)[-1]\n",
-        "\n",
-        "conn_index_closing_circuit = last_state[0]\n",
-        "\n",
-        "# The connection that would close the circuit is at this index\n",
-        "frm, to = sorted_conns[conn_index_closing_circuit]\n",
+        "frm, to = sorted_conns[last_state[0]]\n",
         "\n",
         "print(f\"Product of X coordinates for the junctions {frm} and {to} closing the circuit: {js[frm][0] * js[to][0]}\")"
       ],
