chore: day 8, part 2, print connection index as part of result

--- a/2025/aoc2025.ipynb
+++ b/2025/aoc2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOVjvcSIIva68nNi4rUJ+iS",
+      "authorship_tag": "ABX9TyMLaY+Bm4OYCOi+H500Ms2/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4011,22 +4011,22 @@
         "last_state = list(cs_iter)[-1]\n",
         "frm, to = sorted_conns[last_state[0]]\n",
         "\n",
-        "print(f\"Product of X coordinates for the junctions {frm} and {to} closing the circuit: {js[frm][0] * js[to][0]}\")"
+        "print(f\"Product of X coordinates for the junctions {frm} and {to} ({last_state[0]}. connection) closing the circuit: {js[frm][0] * js[to][0]}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FmZNYlmOAukw",
-        "outputId": "bcfdbdb7-4e77-41fe-f98c-e9893799fea9"
+        "outputId": "1087394b-057f-4abe-e0f6-6e5f31b34763"
       },
-      "execution_count": 143,
+      "execution_count": 147,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Product of X coordinates for the junctions 357 and 570 closing the circuit: 3767453340\n"
+            "Product of X coordinates for the junctions 357 and 570 (6281. connection) closing the circuit: 3767453340\n"
           ]
         }
       ]
