feat: 2025, day 9, part 1 done, part 2 wip

--- a/2025/aoc2025.ipynb
+++ b/2025/aoc2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLaY+Bm4OYCOi+H500Ms2/",
+      "authorship_tag": "ABX9TyO/p5S5jEwccB6wXDVFppZr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4032,10 +4032,461 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Day 9"
+      ],
+      "metadata": {
+        "id": "BwqUoachttly"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Read Input"
+      ],
+      "metadata": {
+        "id": "w1nkWyZptvk1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_input_9 = get_aoc_test_input(2025, 9)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eZKpzuuUNHJh",
+        "outputId": "e0bf9bf2-98fb-4fce-d7c7-90be16086f12"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Attempting to retrieve Advent of Code 2025 Day 9 problem page from https://adventofcode.com/2025/day/9...\n",
+            "Successfully retrieved problem page HTML.\n",
+            "\n",
+            "First 500 characters of retrieved HTML:\n",
+            "---\n",
+            "<!DOCTYPE html>\n",
+            "<html lang=\"en-us\">\n",
+            "<head>\n",
+            "<meta charset=\"utf-8\"/>\n",
+            "<title>Day 9 - Advent of Code 2025</title>\n",
+            "<link rel=\"stylesheet\" type=\"text/css\" href=\"/static/style.css?32\"/>\n",
+            "<link rel=\"stylesheet alternate\" type=\"text/css\" href=\"/static/highcontrast.css?2\" title=\"High Contrast\"/>\n",
+            "<link rel=\"shortcut icon\" href=\"/favicon.png\"/>\n",
+            "<script>window.addEventListener('click', function(e,s,r){if(e.target.nodeName==='CODE'&&e.detail===3){s=window.getSelection();s.removeAllRanges();r=document.createRan\n",
+            "---\n",
+            "Found 37 <code> tags. Inspecting content for test input:\n",
+            "---\n",
+            "Candidate 1:\n",
+            "7,1\n",
+            "11,1\n",
+            "11,7\n",
+            "9,7\n",
+            "9,5\n",
+            "2,5\n",
+            "2,3\n",
+            "7,3\n",
+            "\n",
+            "\n",
+            "Candidate 2:\n",
+            "#\n",
+            "\n",
+            "Candidate 3:\n",
+            ".\n",
+            "\n",
+            "Candidate 4:\n",
+            "..............\n",
+            ".......#...#..\n",
+            "..............\n",
+            "..#....#......\n",
+            "..............\n",
+            "..#......#....\n",
+            "..............\n",
+            ".........#.#..\n",
+            "..............\n",
+            "\n",
+            "\n",
+            "Candidate 5:\n",
+            "O\n",
+            "\n",
+            "Candidate 6:\n",
+            "24\n",
+            "\n",
+            "Candidate 7:\n",
+            "2,5\n",
+            "\n",
+            "Candidate 8:\n",
+            "9,7\n",
+            "\n",
+            "Candidate 9:\n",
+            "..............\n",
+            ".......#...#..\n",
+            "..............\n",
+            "..#....#......\n",
+            "..............\n",
+            "..OOOOOOOO....\n",
+            "..OOOOOOOO....\n",
+            "..OOOOOOOO.#..\n",
+            "..............\n",
+            "\n",
+            "\n",
+            "Candidate 10:\n",
+            "35\n",
+            "\n",
+            "Candidate 11:\n",
+            "7,1\n",
+            "\n",
+            "Candidate 12:\n",
+            "11,7\n",
+            "\n",
+            "Candidate 13:\n",
+            "..............\n",
+            ".......OOOOO..\n",
+            ".......OOOOO..\n",
+            "..#....OOOOO..\n",
+            ".......OOOOO..\n",
+            "..#....OOOOO..\n",
+            ".......OOOOO..\n",
+            ".......OOOOO..\n",
+            "..............\n",
+            "\n",
+            "\n",
+            "Candidate 14:\n",
+            "6\n",
+            "\n",
+            "Candidate 15:\n",
+            "7,3\n",
+            "\n",
+            "Candidate 16:\n",
+            "2,3\n",
+            "\n",
+            "Candidate 17:\n",
+            "..............\n",
+            ".......#...#..\n",
+            "..............\n",
+            "..OOOOOO......\n",
+            "..............\n",
+            "..#......#....\n",
+            "..............\n",
+            ".........#.#..\n",
+            "..............\n",
+            "\n",
+            "\n",
+            "Candidate 18:\n",
+            "50\n",
+            "\n",
+            "Candidate 19:\n",
+            "2,5\n",
+            "\n",
+            "Candidate 20:\n",
+            "11,1\n",
+            "\n",
+            "Candidate 21:\n",
+            "..............\n",
+            "..OOOOOOOOOO..\n",
+            "..OOOOOOOOOO..\n",
+            "..OOOOOOOOOO..\n",
+            "..OOOOOOOOOO..\n",
+            "..OOOOOOOOOO..\n",
+            "..............\n",
+            ".........#.#..\n",
+            "..............\n",
+            "\n",
+            "\n",
+            "Candidate 22:\n",
+            "4772103936\n",
+            "\n",
+            "Candidate 23:\n",
+            "X\n",
+            "\n",
+            "Candidate 24:\n",
+            "..............\n",
+            ".......#XXX#..\n",
+            ".......X...X..\n",
+            "..#XXXX#...X..\n",
+            "..X........X..\n",
+            "..#XXXXXX#.X..\n",
+            ".........X.X..\n",
+            ".........#X#..\n",
+            "..............\n",
+            "\n",
+            "\n",
+            "Candidate 25:\n",
+            "..............\n",
+            ".......#XXX#..\n",
+            ".......XXXXX..\n",
+            "..#XXXX#XXXX..\n",
+            "..XXXXXXXXXX..\n",
+            "..#XXXXXX#XX..\n",
+            ".........XXX..\n",
+            ".........#X#..\n",
+            "..............\n",
+            "\n",
+            "\n",
+            "Candidate 26:\n",
+            "15\n",
+            "\n",
+            "Candidate 27:\n",
+            "7,3\n",
+            "\n",
+            "Candidate 28:\n",
+            "11,1\n",
+            "\n",
+            "Candidate 29:\n",
+            "..............\n",
+            ".......OOOOO..\n",
+            ".......OOOOO..\n",
+            "..#XXXXOOOOO..\n",
+            "..XXXXXXXXXX..\n",
+            "..#XXXXXX#XX..\n",
+            ".........XXX..\n",
+            ".........#X#..\n",
+            "..............\n",
+            "\n",
+            "\n",
+            "Candidate 30:\n",
+            "3\n",
+            "\n",
+            "Candidate 31:\n",
+            "9,7\n",
+            "\n",
+            "Candidate 32:\n",
+            "9,5\n",
+            "\n",
+            "Candidate 33:\n",
+            "..............\n",
+            ".......#XXX#..\n",
+            ".......XXXXX..\n",
+            "..#XXXX#XXXX..\n",
+            "..XXXXXXXXXX..\n",
+            "..#XXXXXXOXX..\n",
+            ".........OXX..\n",
+            ".........OX#..\n",
+            "..............\n",
+            "\n",
+            "\n",
+            "Candidate 34:\n",
+            "24\n",
+            "\n",
+            "Candidate 35:\n",
+            "9,5\n",
+            "\n",
+            "Candidate 36:\n",
+            "2,3\n",
+            "\n",
+            "Candidate 37:\n",
+            "..............\n",
+            ".......#XXX#..\n",
+            ".......XXXXX..\n",
+            "..OOOOOOOOXX..\n",
+            "..OOOOOOOOXX..\n",
+            "..OOOOOOOOXX..\n",
+            ".........XXX..\n",
+            ".........#X#..\n",
+            "..............\n",
+            "\n",
+            "\n",
+            "Test input candidates extracted. Please review them to identify the actual test input and repeat with concrete candidate number (1-based) if needed.\n",
+            "Identified Test Input (candidate 1):\n",
+            "---------------------\n",
+            "7,1\n",
+            "11,1\n",
+            "11,7\n",
+            "9,7\n",
+            "9,5\n",
+            "2,5\n",
+            "2,3\n",
+            "7,3\n",
+            "\n",
+            "---------------------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input_9 = get_aoc_input(2025, 9)"
+      ],
+      "metadata": {
+        "id": "cLy42UMBt_oC",
+        "outputId": "ab20e92b-ef8a-4d75-ed93-8bee15020af6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 136,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Attempting to retrieve Advent of Code 2025 Day 9 puzzle input from https://adventofcode.com/2025/day/9/input...\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "red_tiles = [tuple(map(int, l.split(','))) for l in input_9.splitlines()]\n",
+        "print(f\"Read positions of {len(red_tiles)} positions of red tiles\")"
+      ],
+      "metadata": {
+        "collapsed": true,
+        "id": "mvvDkKVsuJRI",
+        "outputId": "38c555eb-910e-4bb4-e0e0-372b8de2d38b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 137,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Read positions of 496 positions of red tiles\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Part 1\n",
+        "Find largest rectangle with two red tiles in opposite corners"
+      ],
+      "metadata": {
+        "id": "43h8FJZgunq7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "areas = {(i, j): (abs(red_tiles[i][0]-red_tiles[j][0])+1)*(abs(red_tiles[i][1]-red_tiles[j][1])+1) for i in range(len(red_tiles)) for j in range(i+1, len(red_tiles))}\n",
+        "print(f\"Calculated {len(areas)} areas\")"
+      ],
+      "metadata": {
+        "id": "mtzXz7MiubKZ",
+        "outputId": "60f74455-4a50-4c94-d382-ce3b45fcfb1d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 138,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Calculated 122760 areas\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "max(areas.values())"
+      ],
+      "metadata": {
+        "id": "O6fsPEmgvPLJ",
+        "outputId": "dfc81a39-d1ec-429f-fa34-fbcc9b211009",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 139,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4772103936"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 139
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Part2\n",
+        "The lines between adjacent red tiles form a shape. Either X or Y coordinates of two adjacent tiles are the same (only horizontal or vertical edges). Find the largest rectangle with two red tiles in opposite corners inside the shape (edges are fine)."
+      ],
+      "metadata": {
+        "id": "9MHqEH4m6lkZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num_red_tiles = len(red_tiles)\n",
+        "all_edges = [(red_tiles[i], red_tiles[(i+1)%num_red_tiles]) for i in range(num_red_tiles)]"
+      ],
+      "metadata": {
+        "id": "bOkLG7ti6k-P"
+      },
+      "execution_count": 140,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# collect valid rectangles\n",
+        "# 1. all edges are valid rectangles with area = edge length\n",
+        "def len_edge(e):\n",
+        "  (x1, y1), (x2, y2) = e\n",
+        "  return abs(x1-x2)+1 if y1 == y2 else abs(y1-y2)+2\n",
+        "valid_rects_1 = {e: len_edge(e) for e in all_edges}"
+      ],
+      "metadata": {
+        "id": "l6EWFE-1IV-m"
+      },
+      "execution_count": 151,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "max(valid_rects_1.values())"
+      ],
+      "metadata": {
+        "id": "53SvQddRI_4t",
+        "outputId": "89eec2e1-b23d-485d-cbe9-de458b01b8b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 152,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "92556"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 152
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "eZKpzuuUNHJh"
+        "id": "-tgrmOTbZ03p"
       },
       "execution_count": null,
       "outputs": []
