chore: rearrange cells for day 9

--- a/2025/aoc2025.ipynb
+++ b/2025/aoc2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO/p5S5jEwccB6wXDVFppZr",
+      "authorship_tag": "ABX9TyNPuiPph7e8IKLY10IX+Yxz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3608,9 +3608,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z82F9KmA_Otj",
-        "outputId": "7e8484ef-3f7c-48cc-9b4c-dbde7a056dea"
+        "outputId": "c1aedcd9-246b-42c2-cc23-cfd2f4fbe795"
       },
-      "execution_count": 4,
+      "execution_count": 154,
       "outputs": [
         {
           "output_type": "stream",
@@ -3631,7 +3631,7 @@
             "<link rel=\"shortcut icon\" href=\"/favicon.png\"/>\n",
             "<script>window.addEventListener('click', function(e,s,r){if(e.target.nodeName==='CODE'&&e.detail===3){s=window.getSelection();s.removeAllRanges();r=document.createRan\n",
             "---\n",
-            "Found 15 <code> tags. Inspecting content for test input:\n",
+            "Found 22 <code> tags. Inspecting content for test input:\n",
             "---\n",
             "Candidate 1:\n",
             "162,817,812\n",
@@ -3698,6 +3698,27 @@
             "Candidate 15:\n",
             "40\n",
             "\n",
+            "Candidate 16:\n",
+            "67488\n",
+            "\n",
+            "Candidate 17:\n",
+            "216,146,977\n",
+            "\n",
+            "Candidate 18:\n",
+            "117,168,530\n",
+            "\n",
+            "Candidate 19:\n",
+            "216\n",
+            "\n",
+            "Candidate 20:\n",
+            "117\n",
+            "\n",
+            "Candidate 21:\n",
+            "25272\n",
+            "\n",
+            "Candidate 22:\n",
+            "3767453340\n",
+            "\n",
             "Test input candidates extracted. Please review them to identify the actual test input and repeat with concrete candidate number (1-based) if needed.\n",
             "Identified Test Input (candidate 1):\n",
             "---------------------\n",
@@ -3737,9 +3758,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2xhaUmgz_Y9t",
-        "outputId": "e61a5e0d-4bef-44dc-9774-264204909212"
+        "outputId": "7af35b38-dc8f-418f-d351-d9e51c9b13e2"
       },
-      "execution_count": 5,
+      "execution_count": 155,
       "outputs": [
         {
           "output_type": "stream",
@@ -3763,9 +3784,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vOaPUIfM548Z",
-        "outputId": "6368fc48-68d4-482a-e2af-0ee21bce927a"
+        "outputId": "a2f16431-a75c-46a2-b736-c28c7716b324"
       },
-      "execution_count": 51,
+      "execution_count": 156,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3794,7 +3815,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 51
+          "execution_count": 156
         }
       ]
     },
@@ -3811,9 +3832,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ImFm5q0z_fA6",
-        "outputId": "d0d0fd49-0eb2-4ad1-b5b6-d8ca444b7d08"
+        "outputId": "a3535935-e4f7-4a2f-d6bc-8786c825b9ad"
       },
-      "execution_count": 41,
+      "execution_count": 157,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3823,7 +3844,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 157
         }
       ]
     },
@@ -3851,12 +3872,12 @@
         "  # assigns all junctions having the same circuit as d.to to the circuit of d.frm\n",
         "  frm, to = conn\n",
         "  junctions_in_to_circuit = [j for j, c in current_cs.items() if c == current_cs[to]]\n",
-        "  return { **current_cs, **{j: current_cs[frm] for j in junctions_in_to_circuit}}\n"
+        "  return { **current_cs, **{j: current_cs[frm] for j in junctions_in_to_circuit} }\n"
       ],
       "metadata": {
         "id": "Dh3CyzNjKJM0"
       },
-      "execution_count": 116,
+      "execution_count": 158,
       "outputs": []
     },
     {
@@ -3879,7 +3900,7 @@
       "metadata": {
         "id": "elqGRCFZIFog"
       },
-      "execution_count": 117,
+      "execution_count": 159,
       "outputs": []
     },
     {
@@ -3902,7 +3923,7 @@
       "metadata": {
         "id": "_jKhk8jXIHFO"
       },
-      "execution_count": 133,
+      "execution_count": 163,
       "outputs": []
     },
     {
@@ -3929,9 +3950,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ILFjW2GT6KqH",
-        "outputId": "57b45cc2-9372-4bf7-d52d-386222447818"
+        "outputId": "d033d9fc-ea77-4f47-b9ef-0d464106b203"
       },
-      "execution_count": 134,
+      "execution_count": 164,
       "outputs": [
         {
           "output_type": "stream",
@@ -3967,9 +3988,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OKxLLaxT_2lM",
-        "outputId": "bdf5fd3f-6e06-4c61-f981-55440cd24486"
+        "outputId": "aaade4a9-e5d5-4940-86fb-754695b64a8e"
       },
-      "execution_count": 146,
+      "execution_count": 165,
       "outputs": [
         {
           "output_type": "stream",
@@ -4018,9 +4039,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FmZNYlmOAukw",
-        "outputId": "1087394b-057f-4abe-e0f6-6e5f31b34763"
+        "outputId": "80bf4ae5-4d98-43d8-9d47-8de0757d2cab"
       },
-      "execution_count": 147,
+      "execution_count": 166,
       "outputs": [
         {
           "output_type": "stream",
@@ -4058,6 +4079,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
         "id": "eZKpzuuUNHJh",
         "outputId": "e0bf9bf2-98fb-4fce-d7c7-90be16086f12"
       },
@@ -4316,11 +4338,11 @@
         "input_9 = get_aoc_input(2025, 9)"
       ],
       "metadata": {
-        "id": "cLy42UMBt_oC",
-        "outputId": "ab20e92b-ef8a-4d75-ed93-8bee15020af6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cLy42UMBt_oC",
+        "outputId": "ab20e92b-ef8a-4d75-ed93-8bee15020af6"
       },
       "execution_count": 136,
       "outputs": [
@@ -4334,26 +4356,39 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Prepare"
+      ],
+      "metadata": {
+        "id": "_hrSBQOBppgF"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "red_tiles = [tuple(map(int, l.split(','))) for l in input_9.splitlines()]\n",
-        "print(f\"Read positions of {len(red_tiles)} positions of red tiles\")"
+        "print(f\"Read positions of {len(red_tiles)} positions of red tiles\")\n",
+        "\n",
+        "areas = {(i, j): (abs(red_tiles[i][0]-red_tiles[j][0])+1)*(abs(red_tiles[i][1]-red_tiles[j][1])+1) for i in range(len(red_tiles)) for j in range(i+1, len(red_tiles))}\n",
+        "print(f\"Calculated {len(areas)} areas\")"
       ],
       "metadata": {
         "collapsed": true,
-        "id": "mvvDkKVsuJRI",
-        "outputId": "38c555eb-910e-4bb4-e0e0-372b8de2d38b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mvvDkKVsuJRI",
+        "outputId": "3d14b48c-9a5a-459d-d2dc-0f398f95a46e"
       },
-      "execution_count": 137,
+      "execution_count": 214,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Read positions of 496 positions of red tiles\n"
+            "Read positions of 496 positions of red tiles\n",
+            "Calculated 122760 areas\n"
           ]
         }
       ]
@@ -4371,38 +4406,14 @@
     {
       "cell_type": "code",
       "source": [
-        "areas = {(i, j): (abs(red_tiles[i][0]-red_tiles[j][0])+1)*(abs(red_tiles[i][1]-red_tiles[j][1])+1) for i in range(len(red_tiles)) for j in range(i+1, len(red_tiles))}\n",
-        "print(f\"Calculated {len(areas)} areas\")"
-      ],
-      "metadata": {
-        "id": "mtzXz7MiubKZ",
-        "outputId": "60f74455-4a50-4c94-d382-ce3b45fcfb1d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 138,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Calculated 122760 areas\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "max(areas.values())"
       ],
       "metadata": {
-        "id": "O6fsPEmgvPLJ",
-        "outputId": "dfc81a39-d1ec-429f-fa34-fbcc9b211009",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "O6fsPEmgvPLJ",
+        "outputId": "dfc81a39-d1ec-429f-fa34-fbcc9b211009"
       },
       "execution_count": 139,
       "outputs": [
@@ -4437,7 +4448,7 @@
       "metadata": {
         "id": "bOkLG7ti6k-P"
       },
-      "execution_count": 140,
+      "execution_count": 168,
       "outputs": []
     },
     {
@@ -4453,42 +4464,7 @@
       "metadata": {
         "id": "l6EWFE-1IV-m"
       },
-      "execution_count": 151,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "max(valid_rects_1.values())"
-      ],
-      "metadata": {
-        "id": "53SvQddRI_4t",
-        "outputId": "89eec2e1-b23d-485d-cbe9-de458b01b8b9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 152,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "92556"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 152
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "-tgrmOTbZ03p"
-      },
-      "execution_count": null,
+      "execution_count": 174,
       "outputs": []
     }
   ]
